添加了完整的sql文件和Dockerfile，添加了生产模式的yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   profiles:
-    active: dev
+    active: test
   application:
-    name: user-center-backend
+    name: firends-mate
   redis:
     database: 0
     host: 43.138.34.196
