匹配队友添加使用缓存和优先队列的方式，将查询时间从百毫秒级优化为十毫秒级 首页推荐从缓存取数据也设置了分页查询 根据标签查询设置了从缓存中读取,将查询时间从百毫秒级优化为十毫秒级

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     name: firends-mate
   redis:
     database: 0
-    host:
+    host: localhost
     port: 6379
-    password: Mjw20021103
+    #password: Mjw20021103
   #swagger3
   mvc:
     pathmatch:
