添加了es组件，实现了聚合搜索，添加了定时任务用于数据同步，添加了线程池，加快多线程调用。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     port: 6379
     #password: Mjw20021103
   #swagger3
+  elasticsearch:
+    uris: http://localhost:9200
+    username: root
+    #password: 123456
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
